syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/any.proto";
import "io/harness/delegate/ng_task.proto";
import "io/harness/perpetualtask/ng_perpetual_task_client.proto";

message ObtainPerpetualTaskValidationDetailsRequest {
  string account_id = 1;
  string task_type = 2;
  RemotePerpetualTaskClientContext context = 4;
}

message ObtainPerpetualTaskValidationDetailsResponse {
  delegate.NgTaskSetupAbstractions setup_abstractions = 1;
  delegate.NgTaskDetails details = 2;
}

message ObtainPerpetualTaskExecutionParamsRequest {
  string task_type = 1;
  RemotePerpetualTaskClientContext context = 3;
}

message ObtainPerpetualTaskExecutionParamsResponse {
  google.protobuf.Any customized_params = 1;
}

message PerpetualTaskExecutionResponse {
  int32 response_code = 2;
  string response_message = 3;
}