// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.execution.failure;

option java_multiple_files = true;

import "io/harness/pms/contracts/execution/failure/failure_type.proto";

message FailureInfo {
  string errorMessage = 1 [deprecated = true];
  repeated FailureType failureTypes = 2 [deprecated = true];
  repeated FailureData failureData = 3;
}

message FailureData {
  string code = 1;
  string level = 2;
  string message = 3;
  repeated FailureType failureTypes = 4;
}
